--- a/5/config.env
+++ b/5/config.env
@@ -5,32 +5,31 @@ APP_ID = "11381402"
 API_HASH = "349d6f6868d82dc82c7a9b356051f035"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = ""
+TG_BOT_TOKEN = "5552902962:AAFk1i29ynmfjwZPdHIwA7NMH_hFNh1Qc1s"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = ""
+ADMINS = "2136762337"
 
 # Masukan Username Telegram mu tanpa @
 OWNER = "0"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = 0
+FORCE_SUB_GROUP = -1001824009516
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = -
+FORCE_SUB_CHANNEL = -1001848350509
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -
+CHANNEL_ID = -1001855577637
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+DATABASE_URL = "postgres://bsabotbs:RP_-6ktPKj-gW3IxoWBcVTGVhgeFmc6C@mahmud.db.elephantsql.com/bsabotbs"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
 # Untuk Menonaktifkan PROTECT_CONTENT Ubah ke False
 PROTECT_CONTENT = False
-
