--- a/6/config.env
+++ b/6/config.env
@@ -9,7 +9,7 @@ TG_BOT_TOKEN = ""
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = ""
+ADMINS = "2136762337"
 
 # Masukan Username Telegram mu tanpa @
 OWNER = "0"
@@ -33,4 +33,3 @@ DATABASE_URL = ""
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
 # Untuk Menonaktifkan PROTECT_CONTENT Ubah ke False
 PROTECT_CONTENT = False
-
